# custom-rnn

./: Cargo.toml  en-fr.json  en-ma.json  english-autoencode.json  english-autoencode2.json  model.json  olid.json  random-keymash.json  readme.md  spam3.json
src/: main.rs  network.rs  network.rs_old
