[package]
name = "custom-implemented-nn"
version = "0.1.0"
authors = ["tmbx1"]
edition = "2018"

[dependencies]
ndarray-rand = "0.11.0"
rand = "0.7.0"
serde_cbor = "0.11.1"
serde_json = "1.0"
serde-pickle = "0.6"
csv = "1.1"
flate2 = "1.0.14"

[dependencies.ndarray]
version = "0.13.1"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]


